fix(ws): replace deprecated reflection APIs in XmlGenDom
Three deprecated API calls removed:

- DocumentException.getNestedException() → getCause(): getNestedException()
  returned null for SAX parse errors where dom4j only sets the Java cause
  chain, not its legacy field. Using getCause() correctly surfaces the
  underlying SAXException instead of exposing DocumentException as the cause.

- Field.isAccessible() → canAccess(obj): isAccessible() tests whether
  accessibility was explicitly overridden; canAccess(obj) tests actual
  runtime accessibility. Semantics equivalent for the detailMessage path.

- Class.newInstance() → getDeclaredConstructor().newInstance(): removes
  the Java 9+ deprecation warning on VIM object instantiation.

Adds a regression test verifying the DocumentException cause is unwrapped.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>